<?xml version="1.0"?>
<package format="3">
    <name>falcon_mapping_node</name>
    <version>0.0.1</version>

    <description>TSDF and ESDF mapping node for FALCON replacement</description>

    <maintainer email="you@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>